--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <a href="#about" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Tentang Saya</a>
                 </li>
                 <li class="group">
-                  <a href="#portfolio" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Portfolio</a>
+                  <a href="#portfolio" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Project</a>
                 </li>
                 <li class="group">
                   <a href="#skills" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Kemampuan</a>
