--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <a href="#portfolio" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Project</a>
                 </li>
                 <li class="group">
-                  <a href="#skills" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Kemampuan</a>
+                  <a href="#skills" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Keahlian</a>
                 </li>
                 <!-- <li class="group">
                   <a href="#blog" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Blog</a>
@@ -185,7 +185,7 @@
       <div class="container">
         <div class="w-full px-4">
           <div class="mx-auto mb-16 text-center">
-            <h4 class="mb-2 text-2xl font-semibold text-primary">Kemampuan</h4>
+            <h4 class="mb-2 text-2xl font-semibold text-primary">Keahlian</h4>
             <h2 class="mb-4 text-3xl font-bold text-white dark:text-dark sm:text-4xl lg:text-5xl"></h2>
             <p class="text-md font-medium text-secondary md:text-lg"></p>
           </div>
