--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <p class="text-lg font-medium text-secondary lg:text-xl">Sebagai lulusan SMK Wikrama Bogor dengan jurusan Rekayasa Perangkat Lunak (RPL), saya mempunyai pengalaman kurang lebih 2 tahun dalam bidang ini. Saya menilai diri sebagai individu yang mampu bekerja sama dengan tim dan selalu bersemangat untuk berkembang. Saya berkomitmen untuk terus meningkatkan keterampilan saya dan memberikan konstribusi terbaik dalam proyek yang saya kerjakan.</p>
             <p class="text-lg font-medium text-secondary lg:text-xl">  Selain keterampilan teknis, saya memiliki kemauan untuk mencoba. Dan saya selalu berusaha meningkatkan kemampuan dan profesionalisme saya melalui pembelajaran yang berkelanjutan.</p>
             <div class="mt-6">
-              <a href="dist/assets/Cv_Faisal.pdf" download class="inline-block px-6 py-3 text-white bg-primary hover:bg-primary-dark rounded-md font-semibold text-lg transition duration-300">
+              <a href="dist/assets/Cv Faisal.pdf" download class="inline-block px-6 py-3 text-white bg-primary hover:bg-primary-dark rounded-md font-semibold text-lg transition duration-300">
                 Unduh CV
               </a>
             </div>
