--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
               <i class="fa-solid fa-database text-6xl"></i>
             </a>
              <a href="javascript:void(0);" title="PHP" class="mx-4 max-w-[120px] py-4 opacity-60 transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-              <i class="fa-solid fa-database text-6xl"></i>
+              <i class="fa-solid fa-php text-6xl"></i>
             </a>
           </div>
         </div>
